# solana-nft-dressing

./: .gitignore  README.md
frontend/: .eslintrc  config-overrides.js  package.json  tailwind.config.js  tsconfig.json  webpack.config.js
frontend/public/: index.html
frontend/src/: App.tsx  hashlist.json  index.css
frontend/src/components/: Trait.tsx
frontend/src/idl/: nft_dressing.ts
frontend/src/utils/: utils.ts
frontend/src/views/: Home.tsx
programs/nft-dressing/: Anchor.toml  package.json
programs/nft-dressing/programs/nft-dressing/: Cargo.toml
programs/nft-dressing/programs/nft-dressing/src/: lib.rs
programs/nft-dressing/tests/: nft-dressing.ts  utils.ts
scripts/: mint_all.ts  package.json  tsconfig.json
scripts/utils/: utils.ts
