[package]
name = "nft-dressing"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "nft_dressing"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.26.0"
anchor-spl = {version = "0.26.0", features = [ "metadata" ] }
spl-associated-token-account = "^1.0.5"
solana-program = "1.13.5"
mpl-token-metadata = {version = "1.4.3", features = [ "no-entrypoint" ] }
